--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="width:100%;text-align:center;">Internship Form</h1>
+	<form>
+		<label for="first-name-input">First Name</label>
+		<input id="first-name-input" type="text" required/>
+		<label for="last-name-input">Last Name</label>
+		<input id="last-name-input" type="text" required/>
+		<label for="email-input">Email Address</label>
+		<input id="email-input" type="email" required/>
+		<label for="college-input">College</label>
+		<input id="college-input" type="text" required/>
+		<label for="graduation-year">Graduation Year</label>
+		<select id="graduation-year" required>
+			<option>2020</option>
+			<option>2021</option>
+			<option>2022</option>
+			<option>2023</option>
+		</select>
+		<label for="roll-no-input">Roll No.</label>
+		<input id="roll-no-input" type="number" required/>
+		<input id="conditions-checkbox" type="checkbox" required/>Agree to terms and conditions
+		<button type="submit">
+			Submit Form
+		</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
