--- a/main.html
+++ b/main.html
@@ -18,15 +18,15 @@
 		<input id="email-input" type="email" required/>
 		<label for="college-input">College</label>
 		<input id="college-input" type="text" required/>
-		<label for="graduation-year">Graduation Year</label>
-		<select id="graduation-year" required>
+		<label for="grad-year-select">Graduation Year</label>
+		<select id="grad-year-select" required>
 			<option>2020</option>
 			<option>2021</option>
 			<option>2022</option>
 			<option>2023</option>
 		</select>
 		<label for="roll-no-input">Roll No.</label>
-		<input id="roll-no-input" type="number" required/>
+		<input id="roll-no-input" type="text" required/>
 		<input id="conditions-checkbox" type="checkbox" required/>Agree to terms and conditions
 		<button type="submit">
 			Submit Form
