--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
 		<label for="first-name-input">First Name</label>
 		<input id="first-name-input" class="form-control invalid-feedback" type="text" required/>
 		<label for="last-name-input">Last Name</label>
-		<input id="last-name-input" type="text" required/>
+		<input id="last-name-input" class="form-control invalid-feedback" type="text" required/>
 		<label for="email-input">Email Address</label>
-		<input id="email-input" type="email" required/>
+		<input id="email-input" class="form-control invalid-feedback" type="email" required/>
 		<label for="college-input">College</label>
-		<input id="college-input" type="text" required/>
+		<input id="college-input" class="form-control invalid-feedback" type="text" required/>
 		<label for="grad-year-select">Graduation Year</label>
 		<select id="grad-year-select" required>
 			<option>2020</option>
@@ -26,9 +26,9 @@
 			<option>2023</option>
 		</select>
 		<label for="roll-no-input">Roll No.</label>
-		<input id="roll-no-input" type="text" required/>
+		<input id="roll-no-input" class="form-control invalid-feedback" type="text" required/>
 		<label for="conditions-checkbox">Agree to terms and conditions</label>
-		<input id="conditions-checkbox" type="checkbox" required/>
+		<input id="conditions-checkbox" class="form-control invalid-feedback" type="checkbox" required/>
 		<button type="submit">
 			Submit Form
 		</button>
