--- a/main.html
+++ b/main.html
@@ -10,24 +10,24 @@
 	<!-- the entire body must be written by student -->
 	<h1 style="width:100%;text-align:center;">Internship Form</h1>
 	<form>
-		<label for="first-name-input">First Name</label>
+		<label for="first-name-input" class="form-lable">First Name</label>
 		<input id="first-name-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="last-name-input">Last Name</label>
+		<label for="last-name-input" class="form-lable">Last Name</label>
 		<input id="last-name-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="email-input">Email Address</label>
+		<label for="email-input" class="form-lable">Email Address</label>
 		<input id="email-input" class="form-control invalid-feedback" type="email" required/>
-		<label for="college-input">College</label>
+		<label for="college-input" class="form-lable">College</label>
 		<input id="college-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="grad-year-select">Graduation Year</label>
-		<select id="grad-year-select" required>
+		<label for="grad-year-select" class="form-lable">Graduation Year</label>
+		<select id="grad-year-select" class="from-select" required>
 			<option>2020</option>
 			<option>2021</option>
 			<option>2022</option>
 			<option>2023</option>
 		</select>
-		<label for="roll-no-input">Roll No.</label>
+		<label for="roll-no-input" class="form-lable">Roll No.</label>
 		<input id="roll-no-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="conditions-checkbox">Agree to terms and conditions</label>
+		<label for="conditions-checkbox" class="form-lable">Agree to terms and conditions</label>
 		<input id="conditions-checkbox" class="form-control invalid-feedback" type="checkbox" required/>
 		<button type="submit">
 			Submit Form
