--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<label for="college-input" class="form-lable">College</label>
 		<input id="college-input" class="form-control invalid-feedback" type="text" required/>
 		<label for="grad-year-select" class="form-lable">Graduation Year</label>
-		<select id="grad-year-select" class="from-select" required>
+		<select id="grad-year-select" class="form-select" required>
 			<option>2020</option>
 			<option>2021</option>
 			<option>2022</option>
