--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<input id="email-input" class="form-control invalid-feedback" type="email" required/>
 		<label for="college-input" class="form-lable">College</label>
 		<input id="college-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="grad-year-select" class="form-lable">Graduation Year</label>
+		<label for="grad-year-select" class="form-lable invalid-feedback">Graduation Year</label>
 		<select id="grad-year-select" class="form-select" required>
 			<option>2020</option>
 			<option>2021</option>
@@ -27,7 +27,7 @@
 		</select>
 		<label for="roll-no-input" class="form-lable">Roll No.</label>
 		<input id="roll-no-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="conditions-checkbox" class="form-lable">Agree to terms and conditions</label>
+		<label for="conditions-checkbox" class="form-lable invalid-feedback" >Agree to terms and conditions</label>
 		<input id="conditions-checkbox" class="form-control invalid-feedback" type="checkbox" required/>
 		<button type="submit">
 			Submit Form
