--- a/main.html
+++ b/main.html
@@ -1,41 +1,114 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Internship Form</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        .invalid-feedback {
+            display: none;
+            color: red;
+            font-size: 12px;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        button[type="submit"] {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<h1 style="width:100%;text-align:center;">Internship Form</h1>
-	<form>
-		<label for="first-name-input" class="form-lable">First Name</label>
-		<input id="first-name-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="last-name-input" class="form-lable">Last Name</label>
-		<input id="last-name-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="email-input" class="form-lable">Email Address</label>
-		<input id="email-input" class="form-control invalid-feedback" type="email" required/>
-		<label for="college-input" class="form-lable">College</label>
-		<input id="college-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="grad-year-select" class="form-lable invalid-feedback">Graduation Year</label>
-		<select id="grad-year-select" class="form-select" required>
-			<option>2020</option>
-			<option>2021</option>
-			<option>2022</option>
-			<option>2023</option>
-		</select>
-		<label for="roll-no-input" class="form-lable">Roll No.</label>
-		<input id="roll-no-input" class="form-control invalid-feedback" type="text" required/>
-		<label for="conditions-checkbox" class="form-lable invalid-feedback" >Agree to terms and conditions</label>
-		<input id="conditions-checkbox" class="form-control invalid-feedback" type="checkbox" required/>
-		<button type="submit">
-			Submit Form
-		</button>
-	</form>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <h1 class="text-center">Internship Form</h1>
+        <form id="internship-form" novalidate>
+            <div class="form-group">
+                <label for="first-name-input">First Name</label>
+                <input id="first-name-input" class="form-control" type="text" required>
+                <div class="invalid-feedback">Please enter your first name.</div>
+            </div>
 
+            <div class="form-group">
+                <label for="last-name-input">Last Name</label>
+                <input id="last-name-input" class="form-control" type="text" required>
+                <div class="invalid-feedback">Please enter your last name.</div>
+            </div>
+
+            <div class="form-group">
+                <label for="email-input">Email Address</label>
+                <input id="email-input" class="form-control" type="email" required>
+                <div class="invalid-feedback">Please enter a valid email address.</div>
+            </div>
+
+            <div class="form-group">
+                <label for="college-input">College</label>
+                <input id="college-input" class="form-control" type="text" required>
+                <div class="invalid-feedback">Please enter your college name.</div>
+            </div>
+
+            <div class="form-group">
+                <label for="grad-year-select">Graduation Year</label>
+                <select id="grad-year-select" class="form-control" required>
+                    <option value="" disabled selected>Select your graduation year</option>
+                    <option>2020</option>
+                    <option>2021</option>
+                    <option>2022</option>
+                    <option>2023</option>
+                </select>
+                <div class="invalid-feedback">Please select your graduation year.</div>
+            </div>
+
+            <div class="form-group">
+                <label for="roll-no-input">Roll No.</label>
+                <input id="roll-no-input" class="form-control" type="text" required>
+                <div class="invalid-feedback">Please enter your roll number.</div>
+            </div>
+
+            <div class="form-group">
+                <label for="conditions-checkbox">
+                    <input id="conditions-checkbox" type="checkbox" required> Agree to terms and conditions
+                </label>
+                <div class="invalid-feedback">You must agree to the terms and conditions.</div>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit Form</button>
+        </form>
+    </div>
+
+    <script>
+        document.getElementById('internship-form').addEventListener('submit', function (event) {
+            let isValid = true;
+            const form = event.target;
+
+            Array.from(form.elements).forEach(element => {
+                if (element.required && !element.value.trim()) {
+                    isValid = false;
+                    const feedback = element.nextElementSibling;
+                    if (feedback && feedback.classList.contains('invalid-feedback')) {
+                        feedback.style.display = 'block';
+                    }
+                    element.classList.add('has-error');
+                } else {
+                    const feedback = element.nextElementSibling;
+                    if (feedback && feedback.classList.contains('invalid-feedback')) {
+                        feedback.style.display = 'none';
+                    }
+                    element.classList.remove('has-error');
+                }
+            });
+
+            if (!isValid) {
+                event.preventDefault();
+            }
+        });
+    </script>
 </body>
 
 </html>
