--- a/main.html
+++ b/main.html
@@ -30,32 +30,32 @@
         <h1 class="text-center">Internship Form</h1>
         <form id="internship-form" novalidate>
             <div class="form-group">
-                <label for="first-name-input">First Name</label>
+                <label for="first-name-input" class="form-label">First Name</label>
                 <input id="first-name-input" class="form-control" type="text" required>
                 <div class="invalid-feedback">Please enter your first name.</div>
             </div>
 
             <div class="form-group">
-                <label for="last-name-input">Last Name</label>
+                <label for="last-name-input" class="form-label">Last Name</label>
                 <input id="last-name-input" class="form-control" type="text" required>
                 <div class="invalid-feedback">Please enter your last name.</div>
             </div>
 
             <div class="form-group">
-                <label for="email-input">Email Address</label>
+                <label for="email-input" class="form-label">Email Address</label>
                 <input id="email-input" class="form-control" type="email" required>
                 <div class="invalid-feedback">Please enter a valid email address.</div>
             </div>
 
             <div class="form-group">
-                <label for="college-input">College</label>
+                <label for="college-input" class="form-label">College</label>
                 <input id="college-input" class="form-control" type="text" required>
                 <div class="invalid-feedback">Please enter your college name.</div>
             </div>
 
             <div class="form-group">
-                <label for="grad-year-select">Graduation Year</label>
-                <select id="grad-year-select" class="form-control" required>
+                <label for="grad-year-select" class="form-label">Graduation Year</label>
+                <select id="grad-year-select" class="form-select" required>
                     <option value="" disabled selected>Select your graduation year</option>
                     <option>2020</option>
                     <option>2021</option>
@@ -66,13 +66,13 @@
             </div>
 
             <div class="form-group">
-                <label for="roll-no-input">Roll No.</label>
+                <label for="roll-no-input" class="form-label">Roll No.</label>
                 <input id="roll-no-input" class="form-control" type="text" required>
                 <div class="invalid-feedback">Please enter your roll number.</div>
             </div>
 
             <div class="form-group">
-                <label for="conditions-checkbox">
+                <label for="conditions-checkbox" class="form-label">
                     <input id="conditions-checkbox" type="checkbox" required> Agree to terms and conditions
                 </label>
                 <div class="invalid-feedback">You must agree to the terms and conditions.</div>
