--- a/main.html
+++ b/main.html
@@ -72,10 +72,11 @@
             </div>
 
             <div class="form-group">
-                <label for="conditions-checkbox" class="form-label">
-                    <input id="conditions-checkbox" type="checkbox" required> Agree to terms and conditions
+                <label for="conditions-checkbox" class="form-check-input">
+                    <input class="form-check-input" id="conditions-checkbox" type="checkbox" required> Agree to terms and conditions
+					<div class="invalid-feedback">You must agree to the terms and conditions.</div>
                 </label>
-                <div class="invalid-feedback">You must agree to the terms and conditions.</div>
+                
             </div>
 
             <button type="submit" class="btn btn-primary">Submit Form</button>
